<resources>
    <string name="app_name">GetZeals</string>

    <!--    login/signup content-->
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="apply">Apply</string>
    <string name="fullName">Full Name</string>
    <string name="rememberMe">Remember Me</string>
    <string name="tvCreateAcc">Or Create an Account with</string>
    <string name="tvsignin">Or Sign In with</string>

    <!--    side nevigation-->
    <string name="profile">Profile</string>
    <string name="aboutUs">About Us</string>
    <string name="carrers">Careers</string>
    <string name="blog">Blog</string>
    <string name="partnerBusiness">Be A Partner Business</string>
    <string name="contactUs">Contact Us</string>
    <string name="contactSale">Contact Sales</string>

    <!--    home content-->
    <string name="restaurant">Restaurant, Cafe</string>
    <string name="cityZip">City/Zip</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="filter">Filter</string>

    <!--    filter content-->
    <string name="filteringBy">Filtering By</string>

    <!--    offer detail-->
    <string name="mission">Mission Ale House</string>
    <string name="offerDetail">Offer is to put forth or suggest for consideration, acceptance or rejection.\nAn example of offer is to make a bid on a house. ..\nAn example of offer is the act of putting in a bid on a house. An example of offer is the suggested sum of $30 per hour for tutoring.</string>
    <string name="spInstruction"><u>Special Instruction</u></string>
    <string name="specialIns">An offer is a conditional proposal made by a buyer or seller to buy or sell an asset, which becomes legally binding if accepted. An offer is also defined as the act of offering something for sale, or the submission of a bid to buy something.</string>
    <string name="shareZeal">Share this Zeal</string>
    <string name="whatAreZeal"><i>What are Zeals</i></string>
    <string name="discount">Discount Rewards from your favorite businesses</string>
    <string name="voucher">No voucher needed. \nDiscounts are rebates credited to your card statement</string>
    <string name="future">Up to 10% back on future purchases at the business</string>
    <string name="zealWork"><i>How Zeals Work</i></string>
    <string name="way">Easy As <b>1   2   3</b></string>
    <string name="join"><u>Join for Free</u></string>
    <string name="join1">Enroll your eligible credit cards to get cash back at all participating merchants</string>
    <string name="register"><u>Register for Zeals</u></string>
    <string name="register1">Choose specific deals and loyalty programs and earn up to 50% back on your purchases</string>
    <string name="visit"><u>Visit and Save</u></string>
    <string name="visit1">Use your registered credit cards at our merchants and get cash back to you credit card statement</string>
    <string name="claim">Claim Reward</string>
    <string name="info">Info</string>
    <string name="mi">7Mi</string>
    <string name="freeClaim">Free To Claim</string>
    <string name="aboutDiscount"><u>About KFC</u></string>
    <string name="aboutKfc">About KFC</string>

    <!--    partner account-->
    <string name="partner">I already have an Partner Account</string>
    <string name="partnerSignUp">Sign Up As A GetZeals Business Partner!!</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="termAndCondition">By Clicking below I agree with the <a href="">Terms of Service</a> and I have read and understand the <a href="">Privacy Policy</a>.</string>
    <string name="help">Help</string>
    <string name="becomePartner">Become a GetZeals Partner</string>
    <string name="makeZeal">Let\'s make some Zeals!</string>
    <string name="forgetPass">Forgot Password</string>
    <string name="noAccount">Don\'t have an account,\nbecome a Partner</string>

    <!--    share zeal to social media-->
    <string name="mail">Mail</string>
    <string name="facebook">Facebook</string>
    <string name="pin">Pinterest</string>
    <string name="twit">Twitter</string>
    <string name="insta">Instagram</string>
    <string name="share">Share Zeal through</string>

    <!--    sidebar profile-->
    <string name="myZeal">My Zeals</string>
    <string name="userprofile">My Profile</string>
    <string name="account">Account</string>
    <string name="earning">Earnings</string>
    <string name="bankAccount">Bank Account</string>
    <string name="manageCards">Manage Cards</string>

    <!--    user account-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cashReward">Cash Reward Earned</string>
    <string name="viewTransaction">View Transaction</string>
    <string name="transferToBank">Transfer To Bank</string>
    <string name="balance">Balance</string>
    <string name="linkBank">Link Bank</string>
    <string name="btnAddUpdate">Add/Update Bank</string>
    <string name="linkBankDetail">We keep your financial details \n secure so no one sees your \n sensitive info</string>
    <string name="bankTransfer"><u>Transfer To Your Account</u></string>
    <string name="withdrawalAmount">Withdrawal Amount</string>
    <string name="transfer">Transfer</string>
    <string name="cancel">Cancel</string>
    <string name="addAccount">Add Account</string>
    <string name="bankName">Bank Name</string>
    <string name="accNo">Your Account Number</string>
    <string name="routingNo">Your Routing Number</string>
    <string name="addBank">Add New Bank Account</string>
    <string name="profileUp">Profile Update</string>
    <string name="saveChanges">Save Changes</string>
    <string name="changePass">Change Password</string>
    <string name="currPass">Current Password</string>
    <string name="newPass">New Password</string>
    <string name="confPass">Confirm Password</string>
    <string name="aboutYou">About You</string>
    <string name="aboutDetail">We Will Show You Offers Based On Your Profile That We Think You Will Love.</string>
    <string name="spDate">Special Date and Anniversaries</string>
    <string name="identify">How do you identify YourSelf</string>
    <string name="addEvent">+Add Event</string>
    <string name="addHeading">Paid App uses Plaid to connect your account</string>
    <string name="addTopic1">Connect Effortlessly</string>
    <string name="addContent1">Plaid let you securely connect your financial accounts in seconds</string>
    <string name="addTopic2">Your data belongs to you</string>
    <string name="addContent2">Plaid doesn\'t sell personal information, and will only use it with your permission</string>
    <string name="termPrivacy">By selecting \"Agree\" you agree to the Plaid End User Private Policy</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="btnAgree">Agree</string>
    <string name="btnSubmit">Submit</string>

</resources>

