<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="contentDescription">

    <LinearLayout
        android:id="@+id/llAboutZeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvOfferName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/aboutKfc"
            android:textColor="@color/pink"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOfferDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/offerDetail"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/aboutKfc"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRestaurantDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/mission"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/spInstruction"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/specialIns"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWhatAreZeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatAreZeal"
            android:textColor="@color/pink"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/zeal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/discount"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/business" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/voucher"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/dollar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/future"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llZealWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llWhatAreZeal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/zealWork"
            android:textColor="@color/pink"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/way"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/pink"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/join"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvJoin"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/join1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="@color/pink"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvJoin"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/register1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textColor="@color/pink"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/visit"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvJoin"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/visit1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>