<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llSideBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_btn"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:padding="10dp"
        android:src="@drawable/clear" />

    <TextView
        android:id="@+id/tvAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/aboutus"
        android:padding="10dp"
        android:text="@string/aboutUs"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvCarrers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/carrer"
        android:padding="10dp"
        android:text="@string/carrers"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvBlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/blog"
        android:padding="10dp"
        android:text="@string/blog"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPartnerBusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/partner"
        android:padding="10dp"
        android:text="@string/partnerBusiness"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvContactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/contactus"
        android:padding="10dp"
        android:text="@string/contactUs"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvContactSale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/contactus"
        android:padding="10dp"
        android:text="@string/contactSale"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
