<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_btn_white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivsignup"
                android:layout_width="150dp"
                android:layout_height="105dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_pink" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signupFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:drawableStart="@drawable/user_gray"
                android:drawablePadding="10dp"
                android:hint="@string/fullName"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/pink_dark"
                android:textColorHint="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signupEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:drawableStart="@drawable/mail_outline_gray"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/pink_dark"
                android:textColorHint="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/signupPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_border"
                android:drawableStart="@drawable/key_gray"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/pink_dark"
                android:textColorHint="@color/black" />

            <LinearLayout
                android:id="@+id/rememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:checked="true"
                    android:buttonTint="@color/black"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rememberMe"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rememberMe"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/round_btn_pink"
                    android:text="@string/signIn"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/tvCreateAcc"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignUpFacebook"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_btn_blue"
                    android:text="@string/facebook"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>